--- a/source/partials/projects.html.erb
+++ b/source/partials/projects.html.erb
@@ -4,9 +4,31 @@
       <div id="projects">
         <h2 class="text-center">Projects</h2>
         <div class="cards">
-          <% data.projects.each do |project| %>
+          <% data.projects.each_with_index do |project, i| %>
             <div class="card-product">
-              <%= image_tag project.image, alt: "project image" %>
+              <div class="carousel-box">
+                <div id="carouselExampleControls<%= i %>" class="carousel slide" data-ride="carousel">
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <%= image_tag project.image, class:"d-block w-100"%>
+                    </div>
+                    <div class="carousel-item">
+                      <%= image_tag project.image, class:"d-block w-100"%>
+                    </div>
+                    <div class="carousel-item">
+                      <%= image_tag project.image, class:"d-block w-100"%>
+                    </div>
+                  </div>
+                  <a class="carousel-control-prev" href="#carouselExampleControls<%= i %>" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                  </a>
+                </div>
+              </div>
               <div class="card-product-infos w-100">
                 <div class="d-flex justify-content-between align-items-center">
                   <h2><%= project.name %></h2>
@@ -18,6 +40,7 @@
               </div>
             </div>
           <% end %>
+
         </div>
       </div>
     </div>
