fixed the carousel

--- a/source/partials/projects.html.erb
+++ b/source/partials/projects.html.erb
@@ -7,26 +7,28 @@
           <% data.projects.each_with_index do |project, i| %>
             <div class="card-product">
               <div class="carousel-box">
-                <div id="carouselExampleControls<%= i %>" class="carousel slide" data-ride="carousel">
-                  <div class="carousel-inner">
-                    <div class="carousel-item active">
-                      <%= image_tag project.image, class:"d-block w-100"%>
-                    </div>
-                    <div class="carousel-item">
-                      <%= image_tag project.image, class:"d-block w-100"%>
-                    </div>
-                    <div class="carousel-item">
-                      <%= image_tag project.image, class:"d-block w-100"%>
-                    </div>
+                <div id="carouselExampleIndicators<%= i %>" class="carousel slide" data-bs-ride="carousel">
+                  <ol class="carousel-indicators">
+                    <li data-bs-target="#carouselExampleIndicators<%= i %>" data-bs-slide-to="0" class='active'></li>
+                    <% (project.image.count - 1).times do |image|%>
+                      <li data-bs-target="#carouselExampleIndicators<%= i %>" data-bs-slide-to="<%=image + 1%>"></li>
+                    <% end %>
+                  </ol>
+                  <div class="carousel-inner" style=" width:100%; max-height:450px !important;">
+                    <% project.image.each_with_index do |photo, index| %>
+                      <div class="carousel-item <%= 'active' if index == 0 %>">
+                        <%= image_tag (photo), class:"d-block w-100" %>
+                      </div>
+                    <% end %>
                   </div>
-                  <a class="carousel-control-prev" href="#carouselExampleControls<%= i %>" role="button" data-slide="prev">
+                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators<%= i %>" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                  </a>
-                  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="visually-hidden">Previous</span>
+                  </button>
+                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators<%= i %>" data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                  </a>
+                    <span class="visually-hidden">Next</span>
+                  </button>
                 </div>
               </div>
               <div class="card-product-infos w-100">
