--- a/source/stylesheets/components/_cards.scss
+++ b/source/stylesheets/components/_cards.scss
@@ -40,9 +40,9 @@
   }
 }
 
-.carousel-box {
-  // height: 80%;
-}
+// .carousel-box {
+//   height: 80%;
+// }
 
 .external-link {
   margin-left: 8px;
