added tech stack section

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -5,6 +5,8 @@
   <%#= partial 'partials/social' %>
   <!-- About Section -->
   <%= partial 'partials/about' %>
+  <!-- Tech stack Section -->
+  <%= partial 'partials/tech' %>
   <!-- Projects Section -->
   <%= partial 'partials/projects' %>
 </div>
