--- a/source/partials/about.html.erb
+++ b/source/partials/about.html.erb
@@ -3,8 +3,18 @@
     <div class="container text-center">
       <div id="about">
         <h2>About me...</h2>
-        <p>Hi! 你好！こんにちは！ 안녕하세요! </p>
-        <p></p>
+        <div class="introduction container text-center">
+          <p>👋🏻 Hi! 你好！こんにちは！ 안녕하세요!<br/>
+            I'm a web developer originally from Hong Kong 🇭🇰, currently based in Japan 🇯🇵.
+            I finished my college in Korea.
+            Fluent in Chinese, Korean, Japanese, and English, I enjoy connecting with people from diverse backgrounds.
+          </p>
+          <p>
+            I'm passionate about working with Ruby and Ruby on Rails to build awesome websites.
+            Besides coding, I have a deep passion for learning new things and exploring the world around me! 🌎
+          </p>
+        </div>
+
       </div>
     </div>
   </div>
