--- a/source/partials/banner.html.erb
+++ b/source/partials/banner.html.erb
@@ -1,6 +1,6 @@
 <div class="row justify-content-center text-center banner">
   <h2>Hi, I am Yin</h2>
-  <p>Full-stack Web Developer</p>
+  <p style="font-size:20px; font-weight:600;">Full-stack Web Developer</p>
   <div id="contact">
     <div class="d-flex justify-content-center flex-wrap">
       <div class="button-social d-flex flex-column justify-content-center align-items-center">
@@ -9,7 +9,7 @@
       </div>
       <div class="button-social d-flex flex-column justify-content-center align-items-center">
         <i class="fa-brands fa-github"></i>
-        <%= link_to "", "https://github.com/", target: '_blank', class: 'button-social-link' %>
+        <%= link_to "", "https://github.com/tyhyun309", target: '_blank', class: 'button-social-link' %>
       </div>
     </div>
   </div>
