--- a/source/partials/tech.html.erb
+++ b/source/partials/tech.html.erb
@@ -3,36 +3,30 @@
     <div class="container text-center">
       <div id="tech">
         <h2>Tech Stack</h2>
-        <div class="row">
-          <p>
-            <i class="devicon-html5-plain-wordmark"></i>
-            <i class="devicon-css3-plain-wordmark"></i>
-            <i class="devicon-javascript-plain"></i>
-            <i class="devicon-ruby-plain-wordmark"></i>
-            <i class="devicon-rails-plain-wordmark"></i>
-          </p>
-        </div>
-        <div class="row">
-          <p>
-            <i class="devicon-bootstrap-plain-wordmark"></i>
-            <i class="devicon-git-plain-wordmark"></i>
-            <i class="devicon-github-original-wordmark"></i>
-            <i class="devicon-react-original-wordmark"></i>
-            <i class="devicon-heroku-original-wordmark"></i>
-          </p>
-        </div>
-        <div class="row">
-          <p>
-            <i class="devicon-sass-original"></i>
-            <i class="devicon-vscode-plain-wordmark"></i>
-            <i class="devicon-postgresql-plain-wordmark"></i>
-            <i class="devicon-photoshop-plain"></i>
-            <i class="devicon-figma-plain"></i>
-            <i class="devicon-canva-original"></i>
-          </p>
+
+        <div class="row-item">
+
+          <i class="devicon-html5-plain-wordmark"></i>
+          <i class="devicon-css3-plain-wordmark"></i>
+          <i class="devicon-javascript-plain"></i>
+          <i class="devicon-ruby-plain-wordmark"></i>
+          <i class="devicon-rails-plain-wordmark"></i>
+
+          <i class="devicon-bootstrap-plain-wordmark"></i>
+          <i class="devicon-git-plain-wordmark"></i>
+          <i class="devicon-github-original-wordmark"></i>
+          <i class="devicon-react-original-wordmark"></i>
+          <i class="devicon-heroku-original-wordmark"></i>
+
+          <i class="devicon-sass-original"></i>
+          <i class="devicon-vscode-plain-wordmark"></i>
+          <i class="devicon-postgresql-plain-wordmark"></i>
+          <i class="devicon-photoshop-plain"></i>
+          <i class="devicon-figma-plain"></i>
+          <i class="devicon-canva-original"></i>
+
         </div>
       </div>
     </div>
   </div>
-</div>
 </div>
