--- a/source/stylesheets/components/_cards.scss
+++ b/source/stylesheets/components/_cards.scss
@@ -78,6 +78,12 @@
   .cards {
     grid-template-columns: 1fr;
   }
+
+  .card-product img {
+    object-fit: scale-down;
+    height: 45vh;
+    object-position: 50% 50%;
+  }
   .external-link {
     opacity: 1;
   }
@@ -87,6 +93,11 @@
 @media (min-width: 768px) {
   .cards {
     grid-template-columns: 1fr 1fr;
+  }
+  .card-product img {
+    object-fit: scale-down;
+    height: 45vh;
+    object-position: 50% 50%;
   }
   .external-link {
     opacity: 0;
