changed some layout

--- a/source/partials/about.html.erb
+++ b/source/partials/about.html.erb
@@ -13,6 +13,7 @@
             I'm passionate about working with Ruby and Ruby on Rails to build awesome websites.
             Besides coding, I have a deep passion for learning new things and exploring the world around me! 🌎
           </p>
+          <p> <a href="#projects">⬇️⬇️ Check out some of my projects 👀 </a></p>
         </div>
 
       </div>
