added nav bar, banner image

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,6 +1,8 @@
+  <!-- Navbar Section -->
+<%= partial 'partials/navbar' %>
+<!-- Banner Section -->
+<%= partial 'partials/banner' %>
 <div class="container">
-  <!-- Banner Section -->
-  <%= partial 'partials/banner' %>
   <!-- About Section -->
   <%= partial 'partials/about' %>
   <!-- Tech stack Section -->
