--- a/source/stylesheets/components/_banner.scss
+++ b/source/stylesheets/components/_banner.scss
@@ -1,4 +1,28 @@
-.banner {
-  padding: 30px;
-  margin: 50px;
+.banner-image {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(https://res.cloudinary.com/dfdergjip/image/upload/v1689485944/banner_omrjct.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: 57px;
+  height: 100vh;
+  position: relative;
+  background-position: 0% 70%;
+}
+
+
+
+.banner-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  //text-shadow: 1px 1px #fff;
+}
+
+.banner-text > p {
+  text-shadow: 1px 1px #6c757d;
+  font-size:20px; font-weight:600;
+}
+.banner-text > h2 {
+  text-shadow: 1px 1px #303336;
 }
