--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -1,6 +1,6 @@
 // Specific CSS for your home-page
 body {
-  text-shadow: 2px 2px 4px #fff;
+  //text-shadow: 2px 2px 4px #fff;
   min-width: 332px;
 }
 
