--- a/source/partials/banner.html.erb
+++ b/source/partials/banner.html.erb
@@ -1,15 +1,19 @@
-<div class="row justify-content-center text-center banner">
-  <h2>Hi, I am Yin</h2>
-  <p style="font-size:20px; font-weight:600;">Full-stack Web Developer</p>
-  <div id="contact">
-    <div class="d-flex justify-content-center flex-wrap">
-      <div class="button-social d-flex flex-column justify-content-center align-items-center">
-        <i class="fa-solid fa-envelope"></i>
-        <%= mail_to "", "", class: 'button-social-link' %>
-      </div>
-      <div class="button-social d-flex flex-column justify-content-center align-items-center">
-        <i class="fa-brands fa-github"></i>
-        <%= link_to "", "https://github.com/tyhyun309", target: '_blank', class: 'button-social-link' %>
+<div class="banner-image">
+  <div class="banner-text">
+
+    <h2>Hi, I am Yin</h2>
+    <p>Full-stack Web Developer</p>
+    <p style="font-size:12px">🍫And a Mint chocoloate lover  민초단  チョコミン党 🤎💚</p>
+    <div id="contact">
+      <div class="d-flex justify-content-center">
+        <div class="button-social d-flex justify-content-center">
+          <i class="fa-solid fa-envelope"></i>
+          <%= mail_to "", "", class: 'button-social-link' %>
+        </div>
+        <div class="button-social d-flex justify-content-center">
+          <i class="fa-brands fa-github"></i>
+          <%= link_to "", "https://github.com/tyhyun309", target: '_blank', class: 'button-social-link' %>
+        </div>
       </div>
     </div>
   </div>
