--- a/source/partials/projects.html.erb
+++ b/source/partials/projects.html.erb
@@ -33,7 +33,7 @@
               </div>
               <div class="card-product-infos w-100">
                 <div class="d-flex justify-content-between align-items-center">
-                  <h2><%= project.name %></h2>
+                  <h2><%= link_to project.name, project.url, target: '_blank' %></h2>
                   <% link_to project.url, class: 'external-link', target: '_blank' do %>
                     <i class="fas fa-external-link-alt"></i>
                   <% end %>
