fixed navbar hiding content problem

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,10 +3,19 @@
 <!-- Banner Section -->
 <%= partial 'partials/banner' %>
 <div class="container">
+  <div id="about-section" style="height:10px">
+    <p></p>
+  </div>
   <!-- About Section -->
   <%= partial 'partials/about' %>
+  <div id="tech-section" style="height:10px">
+    <p></p>
+  </div>
   <!-- Tech stack Section -->
   <%= partial 'partials/tech' %>
+  <div id="projects-section" style="height:10px">
+    <p></p>
+  </div>
   <!-- Projects Section -->
   <%= partial 'partials/projects' %>
 </div>
