--- a/source/partials/navbar.html.erb
+++ b/source/partials/navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="try">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Yin's Portfolio</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -6,9 +6,9 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link" href="#about">About me</a>
-        <a class="nav-link" href="#projects">Projects</a>
-        <a class="nav-link" href="#tech">Tech Stack</a>
+        <a class="nav-link" href="#about-section">About me</a>
+        <a class="nav-link" href="#projects-section">Projects</a>
+        <a class="nav-link" href="#tech-section">Tech Stack</a>
       </div>
     </div>
   </div>
