--- a/source/partials/navbar.html.erb
+++ b/source/partials/navbar.html.erb
@@ -6,9 +6,9 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link" href="#about-section">About me</a>
-        <a class="nav-link" href="#projects-section">Projects</a>
-        <a class="nav-link" href="#tech-section">Tech Stack</a>
+        <a class="nav-link" href="#about">About me</a>
+        <a class="nav-link" href="#projects">Projects</a>
+        <a class="nav-link" href="#tech">Tech Stack</a>
       </div>
     </div>
   </div>
