--- a/source/stylesheets/pages/_tech.scss
+++ b/source/stylesheets/pages/_tech.scss
@@ -10,6 +10,10 @@
   padding: 40px;
 }
 
+#tech {
+  padding-top: 10px;
+}
+
 // Smallest device
 @media (min-width: 100px) and (max-width: 575px) {
   #tech i {
