--- a/source/partials/projects.html.erb
+++ b/source/partials/projects.html.erb
@@ -38,6 +38,7 @@
                     <i class="fas fa-external-link-alt"></i>
                   <% end %>
                 </div>
+                <span><%= project.tech %></span>
                 <p><%= project.description %></p>
               </div>
             </div>
