--- a/source/partials/about.html.erb
+++ b/source/partials/about.html.erb
@@ -1,4 +1,3 @@
-      
 <div id="about">
   <div class="row my-5">
     <div class="col-12">
@@ -7,7 +6,7 @@
         <div class="introduction container text-center">
           <p>👋🏻 Hi! 你好！こんにちは！ 안녕하세요!<br/>
             I'm a web developer originally from Hong Kong 🇭🇰, currently based in Japan 🇯🇵.
-            I finished my college in Korea.
+            I finished my college in Korea 🇰🇷.
             Fluent in Chinese, Korean, Japanese, and English, I enjoy connecting with people from diverse backgrounds.
           </p>
           <p>
