--- a/source/partials/banner.html.erb
+++ b/source/partials/banner.html.erb
@@ -6,10 +6,10 @@
     <p style="font-size:12px">🍫 And a Mint chocoloate lover  민초단  チョコミン党 🤎💚</p>
     <div id="contact">
       <div class="d-flex justify-content-center">
-        <div class="button-social d-flex justify-content-center">
+        <!--div class="button-social d-flex justify-content-center">
           <i class="fa-solid fa-envelope"></i>
           <%= mail_to "", "", class: 'button-social-link' %>
-        </div>
+        </div-->
         <div class="button-social d-flex justify-content-center">
           <i class="fa-brands fa-github"></i>
           <%= link_to "", "https://github.com/tyhyun309", target: '_blank', class: 'button-social-link' %>
