--- a/source/stylesheets/components/_button.scss
+++ b/source/stylesheets/components/_button.scss
@@ -1,10 +1,11 @@
 .button-social {
   padding: 0 16px;
   position: relative;
-  font-size: 20px;
+  font-size: 25px;
 
   &:hover {
     opacity: 0.7;
+    color: white;
   }
 }
 
