--- a/source/partials/about.html.erb
+++ b/source/partials/about.html.erb
@@ -10,7 +10,7 @@
             Fluent in Chinese, Korean, Japanese, and English, I enjoy connecting with people from diverse backgrounds.
           </p>
           <p>
-            I'm passionate about working with Ruby and Ruby on Rails to build awesome websites.
+            I'm passionate about cloud technologies☁️and web development 🚀, especially AWS and Ruby on Rails.
             Besides coding, I have a deep passion for learning new things and exploring the world around me! 🌎
           </p>
           <p> <a href="#projects">⬇️⬇️ Check out some of my projects 👀 </a></p>
