--- a/source/partials/tech.html.erb
+++ b/source/partials/tech.html.erb
@@ -1,4 +1,3 @@
-      
 <div id="tech">
   <div class="row my-5">
     <div class="col-12">
@@ -24,7 +23,9 @@
           <i class="devicon-postgresql-plain-wordmark"></i>
           <i class="devicon-photoshop-plain"></i>
           <i class="devicon-figma-plain"></i>
+
           <i class="devicon-canva-original"></i>
+          <i class="devicon-amazonwebservices-plain-wordmark"></i>
 
         </div>
       </div>
