edit banner text

--- a/source/partials/banner.html.erb
+++ b/source/partials/banner.html.erb
@@ -3,13 +3,10 @@
 
     <h1>Hi, I am Yin</h1>
     <p>Full-stack Web Developer</p>
-    <p style="font-size:14px">🍫 And a Mint chocoloate lover  민초단  チョコミン党 🤎💚</p>
+    <%# <p style="font-size:14px">🍫 And a Mint chocoloate lover  민초단  チョコミン党 🤎💚</p> %>
+    <p style="font-size:14px;color: antiquewhite;">🗾 47都道府県制覇を目指すエンジニア 💻 </p>
     <div id="contact">
       <div class="d-flex justify-content-center">
-        <!--div class="button-social d-flex justify-content-center">
-          <i class="fa-solid fa-envelope"></i>
-          <%= mail_to "", "", class: 'button-social-link' %>
-        </div-->
         <div class="button-social d-flex justify-content-center">
           <i class="fa-brands fa-github"></i>
           <%= link_to "", "https://github.com/tyhyun309", target: '_blank', class: 'button-social-link' %>
